# dep_test_repo

./: .gitignore  README.md  __init__.py  depersonity.json  depersonity_compact.json  ofm-factory.json  setup.sh  start.sh
ComfyUI-Manager/: .gitignore  README.md  pyproject.toml  ruff.toml
depersonity-facerestore-cf/: __init__.py
depersonity-factory1/: README.md  __init__.py
depersonity-factory2/: README.md  pyproject.toml
depersonity-factory3/: __init__.py
depersonity-factory4/: README.md  __init__.py  pyproject.toml
depersonity-factory5/: __init__.py  readme.md
depersonity-factory6/: .tracking  pyproject.toml
depersonity-factory7/: __init__.py
depersonity-factory8/: __init__.py
depersonity-kjnodes/: __init__.py
depersonity-liveportrait/: __init__.py
depersonity-lora-scheduler/: .gitignore  pyproject.toml
depersonity-lora-scheduler/docs/: AdaptiveLoraScheduler.md
depersonity-lora-scheduler/example_workflows/: wanvideo2_2_I2V_Adaptive_Example.json
depersonity-lora-scheduler/tests/: test_scheduler.py
depersonity-lora-scheduler/web/: adaptive_scheduler.js
depersonity-sam2-segmentation/: .tracking  pyproject.toml  readme.md
depersonity-ts-utils/: README.md
depersonity-videohelpersuite/: README.md  pyproject.toml
depersonity-videohelpersuite/testframework/: README.md
depersonity-videohelpersuite/tests/: README.md
depersonity-wananimate-preprocess/: readme.md
depersonity-wanvideo-wrapper/: .tracking  nodes_model_loading.py  pyproject.toml
lite_version/: __init__.py  depersonity_lite.json  depersonity_lite_compact.json
scripts/: compact_workflow.py  fix_workflow_links.py  patch_graph_dependencies.py
(+13 files in other folders)
