[project]
name = "comfyui-adaptive-lora-scheduler"
version = "0.1.0"
description = "Dynamically balance weights of multiple LoRAs over generation steps for ComfyUI."
authors = [{ name = "depersonityhom", email = "depersonity@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch"
]

[project.entry-points."comfyui.custom_nodes"]
"comfyui-adaptive-lora-scheduler" = "comfyui_adaptive_lora_scheduler"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


